# annihilation-prediction

./: main.py  pyproject.toml
data/: history.json  predicted.json  stable.json
models/: arima_predictor.py
services/: history_service.py  prediction_service.py  stable_service.py
utils/: file_handler.py
